force-app/main/default/objects/WorkOrder/fields/Alt_Work_Site_Flag__c.field-meta.xml
<CustomField>
    <fullName>Alt_Work_Site_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alt Work Site</label>
    <type>Checkbox</type>
</CustomField>