force-app/main/default/objects/WorkOrder/fields/Config_Details__c.field-meta.xml
<CustomField>
    <fullName>Config_Details__c</fullName>
    <label>Config Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>