force-app/main/default/objects/WorkOrder/fields/Customer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>