force-app/main/default/objects/WorkOrder/fields/Customer_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Number__c</fullName>
    <label>Customer Ticket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>