force-app/main/default/objects/WorkOrder/fields/Dispatch_WO_Number__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_WO_Number__c</fullName>
    <label>Dispatch WO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>