force-app/main/default/objects/WorkOrder/fields/Fault__c.field-meta.xml
<CustomField>
    <fullName>Fault__c</fullName>
    <label>Fault</label>
    <length>100</length>
    <type>Text</type>
</CustomField>