force-app/main/default/objects/WorkOrder/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllUsers</fullName>
            </value>
            <value>
                <fullName>InternalUsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>