force-app/main/default/objects/WorkOrder/fields/Part_On_Site_Actual__c.field-meta.xml
<CustomField>
    <fullName>Part_On_Site_Actual__c</fullName>
    <label>Part Arrival</label>
    <type>DateTime</type>
</CustomField>