force-app/main/default/objects/WorkOrder/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <label>PID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>