force-app/main/default/objects/WorkOrder/fields/Priority_Type__c.field-meta.xml
<CustomField>
    <fullName>Priority_Type__c</fullName>
    <formula>IF( Request_Type_Mapping__c = &apos;RMA-RRW&apos;, 1,
			IF( Request_Type_Mapping__c = &apos;RMA-STD&apos;, 2,
						IF(Request_Type_Mapping__c = &apos;3rd Party Dispatch&apos;, 3, 4
									)
						)
			)</formula>
    <label>Priority Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>