force-app/main/default/objects/WorkOrder/fields/Receipt_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date_Local__c</fullName>
    <label>Receipt Date (Site Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>