force-app/main/default/objects/WorkOrder/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>NEW FOR NEW</fullName>
            </value>
            <value>
                <fullName>WRONG PART SHIPPED</fullName>
            </value>
            <value>
                <fullName>OUT OF BOX FAILURE</fullName>
            </value>
            <value>
                <fullName>RMA UPGRADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>