force-app/main/default/objects/WorkOrder/fields/RMA_Id__c.field-meta.xml
<CustomField>
    <fullName>RMA_Id__c</fullName>
    <externalId>true</externalId>
    <label>RMA Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>