force-app/main/default/objects/WorkOrder/fields/Service_Level_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Id__c</fullName>
    <label>Service Level Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>