force-app/main/default/objects/WorkOrder/fields/Service_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Name__c</fullName>
    <label>Service Level Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NFN</fullName>
                <label>New for New</label>
            </value>
            <value>
                <fullName>5x9 NBD PT</fullName>
            </value>
            <value>
                <fullName>7x9 NCD PO</fullName>
            </value>
            <value>
                <fullName>7x9 NCD PT</fullName>
            </value>
            <value>
                <fullName>7x24x4 PO</fullName>
            </value>
            <value>
                <fullName>7x24x4 PT</fullName>
            </value>
            <value>
                <fullName>S-TECH</fullName>
            </value>
            <value>
                <fullName>5x9 NBD PO FSL</fullName>
            </value>
            <value>
                <fullName>C-TECH</fullName>
            </value>
            <value>
                <fullName>15 Day Repair &amp; Return</fullName>
            </value>
            <value>
                <fullName>5x9 NBD PT FSL</fullName>
            </value>
            <value>
                <fullName>7x9 NCD PT FSL</fullName>
            </value>
            <value>
                <fullName>7x9 NCD PO FSL</fullName>
            </value>
            <value>
                <fullName>5x9 NBD PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>