force-app/main/default/objects/WorkOrder/fields/Ship_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Local__c</fullName>
    <label>Ship Date (Site Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>