force-app/main/default/objects/WorkOrder/fields/Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Method__c</fullName>
    <label>Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>2nd Day Air</fullName>
            </value>
            <value>
                <fullName>3 Day Select</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Next Day Air</fullName>
            </value>
            <value>
                <fullName>Next Day Air Saver</fullName>
            </value>
            <value>
                <fullName>Next Flight Out</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Saturday Delivery</fullName>
            </value>
            <value>
                <fullName>FedEx First Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>