force-app/main/default/objects/WorkOrder/fields/SN_Override__c.field-meta.xml
<CustomField>
    <fullName>SN_Override__c</fullName>
    <label>SN Override</label>
    <length>30</length>
    <type>Text</type>
</CustomField>