force-app/main/default/objects/WorkOrder/fields/SN_Override_Flag__c.field-meta.xml
<CustomField>
    <fullName>SN_Override_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SN Override</label>
    <type>Checkbox</type>
</CustomField>