force-app/main/default/objects/WorkOrder/fields/Solution_Set_HW_Role_Relation__c.field-meta.xml
<CustomField>
    <fullName>Solution_Set_HW_Role_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Set - HW Role Relation</label>
    <referenceTo>Solution_Set_HW_Role_Relation__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>