force-app/main/default/objects/WorkOrder/fields/Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>