force-app/main/default/objects/WorkOrder/fields/Support_Class_Failure_Reason_Relation__c.field-meta.xml
<CustomField>
    <fullName>Support_Class_Failure_Reason_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Class - Failure Reason Relation</label>
    <referenceTo>Support_Class_Failure_Reason_Relation__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>