force-app/main/default/objects/WorkOrder/fields/Tech_On_Site_Actual_Local__c.field-meta.xml
<CustomField>
    <fullName>Tech_On_Site_Actual_Local__c</fullName>
    <label>Tech Arrival (Site Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>